warning: for experimental keys they have been set to what the descr says is the default also: lower differences between yaml & toml add my commmandstring to get the server running with maximal rebuilds, used to test

--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -1,5 +1,9 @@
 # hugo server --minify --themesDir ../..
 
+# for maximum cleanups and rebuilds, run where you checked out the repository
+# hugo server --printPathWarnings --disableFastRender --cleanDestinationDir=true --logLevel=debug \
+# --gc -M -s exampleSite --themesDir ../.. -b http://127.0.0.1/
+
 baseURL: http://0.0.0.0:1313/hugo-book/
 title: Hugo Book
 theme: hugo-book
@@ -120,14 +124,15 @@ params:
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables portable links and link checks in markdown pages.
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
-  # Theme will print warning or error if page referenced in markdown does not exists.
-  # Possible values are false | 'warning' | 'error'
-  BookPortableLinks: 'warning'
+  # Hugo Book will print warning or error if page referenced in markdown does not exists.
+  # Possible values are false | "warning" | "error"
+  BookPortableLinks: false
 
   # /!\ This is an experimental feature, might be removed or changed at any time
-  # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
-  # can be false, true or 'precache', precache will try to download all content pages on install.
-  BookServiceWorker: "precache"
+  # (Optional, experimental, default false)
+  # When set to 'preache' it enables a service worker that caches visited pages and resources for offline use.
+  # Possible values are false | true | "precache"
+  # BookServiceWorker: "precache"
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
