--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -1,5 +1,9 @@
 # hugo server --minify --themesDir ../..
 
+# for maximum cleanups and rebuilds, run where you checked out the repository
+# hugo server --printPathWarnings --disableFastRender --cleanDestinationDir=true --logLevel=debug \
+# --gc -M -s exampleSite --themesDir ../.. -b http://127.0.0.1/
+
 baseURL = 'http://0.0.0.0:1313/hugo-book/'
 title = 'Hugo Book'
 theme = 'hugo-book'
@@ -104,6 +108,7 @@ enableGitInfo = true
   BookSection = 'docs'
 
   # Here for backwar compatibility, not required.
+  # It's here as an example how to use it with BookLastChangeLink or BookEditLink
   BookRepo = 'https://github.com/alex-shpak/hugo-book/'
 
   # (Optional, default none) Set template for commit link for the page. Requires enableGitInfo.
@@ -136,13 +141,15 @@ enableGitInfo = true
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables portable links and link checks in markdown pages.
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
-  # Theme will print warning or error if page referenced in markdown does not exists.
+  # Hugo Book will print warning or error if page referenced in markdown does not exists.
   # Possible values are false | 'warning' | 'error'
-  BookPortableLinks = 'warning'
+  BookPortableLinks = false
 
   # /!\ This is an experimental feature, might be removed or changed at any time
-  # (Optional, experimental, default false) Enables service worker that caches visited pages and resources for offline use.
-  BookServiceWorker = 'precache'
+  # (Optional, experimental, default false)
+  # When set to 'preache' it enables a service worker that caches visited pages and resources for offline use.
+  # Possible values are false | true | 'precache'
+  # BookServiceWorker = 'precache'
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
