--- a/exampleSite/hugo.toml
+++ b/exampleSite/hugo.toml
@@ -107,7 +107,7 @@ enableGitInfo = true
   # For backward compatibility you can set '*' to render all sections to menu. Acts same as '/'
   BookSection = 'docs'
 
-  # Here for backwar compatibility, not required.
+  # Here for backward compatibility, not required.
   # It's here as an example how to use it with BookLastChangeLink or BookEditLink
   BookRepo = 'https://github.com/alex-shpak/hugo-book/'
 
@@ -143,13 +143,13 @@ enableGitInfo = true
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
   # Hugo Book will print warning or error if page referenced in markdown does not exists.
   # Possible values are false | 'warning' | 'error'
-  BookPortableLinks = false
+  BookPortableLinks = 'warning'
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false)
   # When set to 'preache' it enables a service worker that caches visited pages and resources for offline use.
   # Possible values are false | true | 'precache'
-  # BookServiceWorker = 'precache'
+  BookServiceWorker = 'precache'
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false) Enables a drop-down menu for translations only if a translation is present.
