use previous quote style

--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -125,13 +125,13 @@ params:
   # (Optional, experimental, default false) Enables portable links and link checks in markdown pages.
   # Portable links meant to work with text editors and let you write markdown without {{< relref >}} shortcode
   # Hugo Book will print warning or error if page referenced in markdown does not exists.
-  # Possible values are false | "warning" | "error"
-  BookPortableLinks: "warning"
+  # Possible values are false | 'warning' | 'error'
+  BookPortableLinks: 'warning'
 
   # /!\ This is an experimental feature, might be removed or changed at any time
   # (Optional, experimental, default false)
   # When set to 'preache' it enables a service worker that caches visited pages and resources for offline use.
-  # Possible values are false | true | "precache"
+  # Possible values are false | true | 'precache'
   BookServiceWorker: "precache"
 
   # /!\ This is an experimental feature, might be removed or changed at any time
