--- a/hugo.toml
+++ b/hugo.toml
@@ -2,3 +2,14 @@
 [module.hugoVersion]
   extended = true
   min = "0.146.0"
+
+[outputFormats]
+[outputFormats.print]
+baseName = print
+isHTML = true
+mediaType = text/html
+path = ""
+permalinkable = false
+
+[outputs]
+section = ["HTML", "print"]
